--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         <ul>
           <li><a href="https://github.com/camunda/camunda-bpm-examples">Camunda BPM Examples</a></li>
           <li><a href="https://github.com/38leinaD/bpmn-diff">BPMN difftool for Git</a></li>
+          <li><a href="https://github.com/bpmn-io/bpmnlint">BPMN Lint (core)</a></li>
+          <li><a href="https://github.com/camunda/camunda-modeler-linter-plugin">BPMN Lint (plugin for Modeler)</a></li>
         </ul>
       
       </section>
