--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <h3 id="полезные-ссылки">Полезные ссылки</h3>
         <ul>
           <li><a href="https://github.com/camunda/camunda-bpm-examples">Camunda BPM Examples</a></li>
+          <li><a href="https://github.com/camunda-consulting">Camunda Consulting</a></li>
           <li><a href="https://github.com/38leinaD/bpmn-diff">BPMN difftool for Git</a></li>
           <li><a href="https://github.com/bpmn-io/bpmnlint">BPMN Lint (core)</a></li>
           <li><a href="https://github.com/camunda/camunda-modeler-linter-plugin">BPMN Lint (plugin for Modeler)</a></li>
