--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
           <li><a href="https://github.com/38leinaD/bpmn-diff">BPMN difftool for Git</a></li>
           <li><a href="https://github.com/bpmn-io/bpmnlint">BPMN Lint (core)</a></li>
           <li><a href="https://github.com/camunda/camunda-modeler-linter-plugin">BPMN Lint (plugin for Modeler)</a></li>
+          <li><a href="https://github.com/bpmn-io/bpmn-js-examples">bpmn-js Examples</a></li>
+          <li><a href="https://github.com/bpmn-io/awesome-bpmn-io">Cool projects and resource</a> from <a href="https://github.com/sindresorhus/awesome">awesome</a></li>
         </ul>
       
       </section>
