--- a/index.html
+++ b/index.html
@@ -59,15 +59,17 @@
                 </li>
 
                 <li>
-                  <a itemprop="sameAs" href="https://youtube.com" target="_blank" rel="noopener" title="Записи митапов"
-                    data-toggle="tooltip" data-placement="bottom">
+                  <a itemprop="sameAs"
+                    href="https://github.com/camunda-user-group-ru/camunda-ru-awesome/blob/master/README.md#%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE-%D1%81%D0%BE-%D0%B2%D1%81%D1%82%D1%80%D0%B5%D1%87"
+                    target="_blank" rel="noopener" title="Записи митапов" data-toggle="tooltip" data-placement="bottom">
                     <i class="fab fa-youtube big-icon"></i>
                   </a>
                 </li>
 
                 <li>
-                  <a itemprop="sameAs" href="https://meetup.com" target="_blank" rel="noopener"
-                    title="Информация о новых и прошедших митапах" data-toggle="tooltip" data-placement="bottom">
+                  <a itemprop="sameAs" href="https://www.meetup.com/Camunda-User-Group-Russia/" target="_blank"
+                    rel="noopener" title="Информация о новых и прошедших митапах" data-toggle="tooltip"
+                    data-placement="bottom">
                     <i class="fab fa-meetup big-icon"></i>
                   </a>
                 </li>
